# krax

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  REVIEWER.md  clippy.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.claude/skills/krax-architecture/: SKILL.md
.claude/skills/krax-conventions/: SKILL.md
.claude/skills/krax-rust-engine/: SKILL.md
contracts/: .gitignore
crates/krax-batcher/: Cargo.toml
crates/krax-batcher/src/: lib.rs
crates/krax-config/: Cargo.toml
crates/krax-config/src/: lib.rs
crates/krax-execution/: Cargo.toml
crates/krax-execution/src/: lib.rs
crates/krax-mempool/: Cargo.toml
crates/krax-mempool/src/: lib.rs
crates/krax-metrics/: Cargo.toml
crates/krax-metrics/src/: lib.rs
crates/krax-prover/: Cargo.toml
crates/krax-prover/src/: lib.rs
crates/krax-rpc/: Cargo.toml
crates/krax-rpc/src/: lib.rs
crates/krax-rwset/: Cargo.toml
crates/krax-rwset/src/: lib.rs
crates/krax-sequencer/: Cargo.toml
crates/krax-sequencer/src/: lib.rs
crates/krax-state/: Cargo.toml
crates/krax-state/src/: lib.rs
crates/krax-state/src/mpt/: mod.rs  slots.rs  trie.rs
crates/krax-state/tests/: restart.rs  snapshot_isolation.rs
crates/krax-state/tests/fixtures/: mpt_roots.json
crates/krax-types/: Cargo.toml
crates/krax-types/src/: block.rs  journal.rs  journal_entry.rs  lib.rs  rwset.rs  snapshot.rs  state.rs  test_helpers.rs  tx.rs
docs/plans/: step-0.1-cargo-workspace.md  step-0.9-readme.md  step-1.1a-trait-interfaces.md  step-1.2b-tests.md  step-1.3.5-decisions.md  step-1.3.5-plan.md  step-1.3a-plan.md  step-1.3b-decisions.md  step-1.4-plan.md  step-1.5-decisions.md  step-1.5-plan.md
docs/plans/archive/: step-0.1-cargo-workspace.md  step-0.2-directory-structure.md  step-0.3-minimal-entrypoint.md  step-0.4-makefile.md  step-0.5-gitignore-env-example.md  step-0.6-docker-compose.md  step-0.7-foundry-init.md  step-0.8-lint-format-config.md  step-1.1a-decisions.md  step-1.1b-data-types.md  step-1.1b-decisions.md  step-1.2-decisions.md  step-1.2a-derives.md  step-1.3a-decisions.md  step-1.3b-plan.md  step-1.4-decisions.md
scripts/: devnet-down.sh  devnet-up.sh
