[workspace]
resolver = "3"
members = [
    # Binaries
    "bin/kraxd",
    "bin/kraxctl",
    "bin/kraxprover",
    # Library crates
    "crates/krax-types",
    "crates/krax-config",
    "crates/krax-mempool",
    "crates/krax-rwset",
    "crates/krax-sequencer",
    "crates/krax-state",
    "crates/krax-execution",
    "crates/krax-batcher",
    "crates/krax-prover",
    "crates/krax-rpc",
    "crates/krax-metrics",
]

[workspace.package]
version    = "0.1.0"
edition    = "2024"
license    = "Apache-2.0"
# Placeholder — replace with the actual GitHub URL before V1.0 branding.
repository = "https://github.com/krax-labs/krax"
authors    = ["Krax Contributors"]

# ---------------------------------------------------------------------------
# [workspace.dependencies]
#
# All external dependency versions live here. Per-crate Cargo.toml files
# reference these via `dep-name = { workspace = true }` or
# `dep-name.workspace = true`. Crates do NOT specify versions themselves.
#
# VERSION STATUS (resolved 2026-05-06):
#   ✅ CONFIRMED  — verified via `cargo search` or Context7
#   ⚠️ ESTIMATED  — stable crate, training-data version, low breakage risk
# ---------------------------------------------------------------------------

[workspace.dependencies]

# --- EVM interpreter ---
# ✅ cargo search revm (2026-05-06): crates.io version is 38.0.0.
#    Note: the revm *git workspace tag* is v55; the published *crate* version is 38.0.0.
#    These are independent numbering schemes — do not confuse them.
revm = { version = "38", default-features = false, features = ["std", "serde"] }

# --- Reth execution layer ---
# ✅ cargo search reth-ethereum (2026-05-06): no real crates.io release (0.0.0 placeholders only).
#    Strategy: git dependency pinned to HEAD of main at the time of workspace init.
#    Rev: 02d1776786abc61721ae8876898ad19a702e0070 (from git ls-remote, 2026-05-06).
#    All reth-* entries use the SAME rev to ensure a coherent snapshot.
#
#    reth-ethereum-primitives: cargo search returns 0.0.0 (placeholder only — not a
#    standalone published crate). Per plan: removed from workspace.dependencies.
#    Primitives are accessed via reth-ethereum's re-exports (e.g. reth_ethereum::primitives::*).
#    AGENTS.md Rule 10 approved-deps list updated to match.
reth-ethereum        = { git = "https://github.com/paradigmxyz/reth", rev = "02d1776786abc61721ae8876898ad19a702e0070", default-features = false }
reth-db              = { git = "https://github.com/paradigmxyz/reth", rev = "02d1776786abc61721ae8876898ad19a702e0070", default-features = false }
reth-evm             = { git = "https://github.com/paradigmxyz/reth", rev = "02d1776786abc61721ae8876898ad19a702e0070", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "02d1776786abc61721ae8876898ad19a702e0070", default-features = false }

# --- Ethereum types ---
# ✅ Context7 (/alloy-rs/alloy + /alloy-rs/core, 2026-05-06): version "1" confirmed.
alloy-primitives = { version = "1", default-features = false, features = ["serde"] }
alloy-rpc-types  = { version = "1", default-features = false }
alloy-sol-types  = { version = "1", default-features = false }

# --- JSON-RPC server ---
# ✅ cargo search jsonrpsee (2026-05-06): 0.26.0
jsonrpsee = { version = "0.26", features = ["server"] }

# --- Metrics ---
# ✅ cargo search metrics (2026-05-06): 0.24.5
# ✅ cargo search metrics-exporter-prometheus (2026-05-06): 0.18.3
metrics                     = "0.24"
metrics-exporter-prometheus = "0.18"

# --- CLI ---
# ✅ cargo search clap (2026-05-07): 4.6.1. Version "4" range includes 4.6.1.
clap = { version = "4", features = ["derive"] }

# --- Async runtime ---
# ⚠️ ESTIMATED: tokio 1.x and tokio-util 0.7 are stable.
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "time"] }

# --- Error handling ---
# ⚠️ ESTIMATED: thiserror moved to 2.x in late 2024; anyhow 1.x is stable.
thiserror = "2"
anyhow    = "1"

# --- Serialization ---
# ⚠️ ESTIMATED: serde 1.x is stable.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Logging ---
# ⚠️ ESTIMATED: tracing 0.1 and tracing-subscriber 0.3 are stable.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# --- Concurrency ---
# ⚠️ ESTIMATED: parking_lot 0.12, rayon 1, crossbeam 0.8 are stable.
parking_lot = "0.12"
rayon       = "1"
crossbeam   = "0.8"

# --- Concurrent map ---
# ✅ cargo search dashmap (2026-05-06): latest is 7.0.0-rc2 (pre-release).
#    Pinning to "6" (latest stable series) — Cargo excludes pre-releases from this range.
#    Upgrade to 7.x when it reaches stable release.
dashmap = "6"

# --- Test-only ---
# ⚠️ ESTIMATED: proptest 1.x and pretty_assertions 1.x are stable.
# ✅ cargo search rstest (2026-05-06): 0.26.1
proptest          = "1"
rstest            = "0.26"
pretty_assertions = "1"

# ---------------------------------------------------------------------------
# Workspace-level lint policy (Rust 1.74+, Cargo workspace inheritance).
# Per-crate Cargo.toml files opt in via [lints] workspace = true.
# ---------------------------------------------------------------------------

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# AGENTS.md code quality rules enforced at workspace level.
dbg_macro     = "deny"
todo          = "deny"
unimplemented = "deny"
unwrap_used   = "deny"

# Pedantic group at priority -1; individual overrides below take precedence.
# Note: make lint runs with -D warnings, so pedantic = "warn" is effectively
# enforced as an error. Any pedantic lint that fires must be fixed or suppressed
# at the call site with a documented reason.
pedantic = { level = "warn", priority = -1 }

# Suppress pedantic lints that fire on valid Krax patterns.
# module_name_repetitions: domain types (RwSetError, SequencerError, MptState)
#   live in modules named after the concept. Repetition is intentional.
# must_use_candidate: constructors, builders, getters don't need #[must_use].
# missing_errors_doc: deferred — covered by missing_docs = "warn" above.
# missing_panics_doc: same reasoning as missing_errors_doc.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
