[package]
name             = "krax-metrics"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
# Intentionally empty. Dependencies are added in the phase where this crate
# first needs them, per AGENTS.md Rule 10.

[features]
# Empty placeholder; integration tests gated behind this flag land in Phase 1+.
integration = []

[lints]
workspace = true
