[package]
name             = "krax-state"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
# MptState implements State and Snapshot from krax-types.
krax-types        = { path = "../krax-types" }
# B256 is used directly in mpt/mod.rs; krax-types does not re-export it.
alloy-primitives  = { workspace = true }

[dev-dependencies]
rstest            = { workspace = true }
pretty_assertions = { workspace = true }

[features]
# Empty placeholder; integration tests gated behind this flag land in Phase 1+.
integration = []

[lints]
workspace = true
