[package]
name             = "krax-types"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
# B256 (= FixedBytes<32>) is the slot key and value type throughout the State trait.
alloy-primitives = { workspace = true }
# TxEnvelope (EIP-2718 wire-format signed transaction) wraps PendingTx.
alloy-consensus  = { workspace = true }
# Per-crate typed errors per AGENTS.md Rule 3.
thiserror        = { workspace = true }

[features]
# Empty placeholder; integration tests gated behind this flag land in Phase 1+.
integration = []

[lints]
workspace = true
